--- a/Motor.ioc
+++ b/Motor.ioc
@@ -204,13 +204,15 @@ SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=AutoReloadPreload,Channel-PWM Generation1 CH1,Period
-TIM2.Period=65535
+TIM2.IPParameters=AutoReloadPreload,Channel-PWM Generation1 CH1,Period,Prescaler,Pulse-PWM Generation1 CH1
+TIM2.Period=4199
+TIM2.Prescaler=0
+TIM2.Pulse-PWM\ Generation1\ CH1=0
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Polarity=TIM_ICPOLARITY_RISING
 TIM3.IPParameters=EncoderMode,IC1Polarity
 TIM6.IPParameters=Prescaler,Period
-TIM6.Period=4999
+TIM6.Period=999
 TIM6.Prescaler=8399
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
